--- a/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
@@ -1,5 +1,6 @@
 ﻿@page "/sistema/incluir"
 
+@inject NavigationManager NavigationManager
 @inject IAppService<SistemaViewModel> SistemaAppService
 
 <div class="col-lg-12">
@@ -20,9 +21,7 @@
                     <label class="col-sm-2 control-label">Nome</label>
                     <div class="col-sm-10">
                         <InputText class="form-control" @bind-Value="@model.Nome" placeholder="Nome" />
-                        <ValidationMessage For="@(() => model.Nome)" />
-                        @*<input type="text" class="form-control" asp-for="Sistema.Nome" placeholder="@Html.DisplayNameFor(x => x.Sistema.Nome)">*@
-                        @*<span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Sistema.Nome)</span>*@
+                        <ValidationMessage class="help-block m-b-none" For="@(() => model.Nome)" />
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -30,15 +29,13 @@
                     <label class="col-sm-2 control-label">Descrição</label>
                     <div class="col-sm-10">
                         <InputText class="form-control" @bind-Value="@model.Descricao" placeholder="Descrição" />
-                        <ValidationMessage For="@(() => model.Descricao)" />
-                        @*<input type="text" class="form-control" asp-for="Sistema.Descricao" placeholder="@Html.DisplayNameFor(x => x.Sistema.Descricao)">*@
-                        @*<span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Sistema.Descricao)</span>*@
+                        <ValidationMessage class="help-block m-b-none" For="@(() => model.Descricao)" />
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <NavLink class="btn btn-white" href="/sistema/listar">Voltar</NavLink>
+                        <NavLink class="btn btn-white" role="button" href="/sistema/listar">Voltar</NavLink>
                         <button class="btn btn-primary" type="submit">Incluir</button>
                     </div>
                 </div>
@@ -55,7 +52,9 @@
 
     void OnValidSubmit()
     {
-        validationStatus = "Success!";
+        SistemaAppService.Incluir(model);
+
+        NavigationManager.NavigateTo("/sistema/listar");
     }
 
     void OnInvalidSubmit()
