[CHORE] Code Cleanup

--- a/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor.Server/Pages/Sistema/Incluir.razor
@@ -1,7 +1,7 @@
 ﻿@page "/sistema/incluir"
 
 @inject NavigationManager NavigationManager
-@inject IAppService<SistemaViewModel> SistemaAppService
+@inject ICrudAppService<SistemaViewModel> SistemaAppService
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
