[FEAT] Encapsulamento de Crud classes

--- a/src/Cpnucleo.Blazor.Server/Pages/Sistema/Listar.razor
+++ b/src/Cpnucleo.Blazor.Server/Pages/Sistema/Listar.razor
@@ -1,7 +1,7 @@
 ﻿@page "/sistema/listar"
 
 @inject NavigationManager NavigationManager
-@inject ICrudAppService<SistemaViewModel> SistemaAppService
+@inject ISistemaAppService SistemaAppService
 
 @if (lista == null)
 {
