--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         </ul>
                         <ul class="nav navbar-top-links navbar-right">
                             <li>
-                                <a asp-page="/Login" asp-page-handler="Logout">
+                                <a asp-page="/Login" asp-route-logout="true">
                                     <i class="fa fa-sign-out"></i> Sair
                                 </a>
                             </li>
