[FIX] Correção no JS de Workflow

--- a/src/Cpnucleo.RazorPages/Pages/FluxoTrabalho.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/FluxoTrabalho.cshtml
@@ -68,7 +68,7 @@
                                 var idTarefa = idsTarefa[i];
 
                                 var idWorkflowTarefa = $("#" + idTarefa).data("idworkflow");
-                                var idWorkflowColuna = @workflow.Id;
+                                var idWorkflowColuna = '@workflow.Id';
 
                                 if (idWorkflowColuna != idWorkflowTarefa) {
 
