--- a/src/Cpnucleo.RazorPages.Material/Pages/_ViewImports.cshtml
+++ b/src/Cpnucleo.RazorPages.Material/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-@using Cpnucleo.RazorPages.Material
+@using Cpnucleo.RazorPages.Material.Configuration
+@using Microsoft.Extensions.Options
+
 @namespace Cpnucleo.RazorPages.Material.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
