--- a/src/Cpnucleo.RazorPages.Material/Pages/Sistema/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages.Material/Pages/Sistema/Incluir.cshtml
@@ -5,41 +5,18 @@
     ViewData["Title"] = "Inclusão de Sistema";
 }
 
-<div class="col-lg-12">
-    <div class="ibox float-e-margins">
-        <div class="ibox-title">
-            <h5>@ViewData["Title"]</h5>
-            <div class="ibox-tools">
-                <a class="fullscreen-link">
-                    <i class="fa fa-expand"></i>
-                </a>
-            </div>
-        </div>
-        <div class="ibox-content">
-            <form method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Sistema.Nome"></label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" asp-for="Sistema.Nome" placeholder="@Html.DisplayNameFor(x => x.Sistema.Nome)">
-                        <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Sistema.Nome)</span>
-                    </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Sistema.Descricao"></label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" asp-for="Sistema.Descricao" placeholder="@Html.DisplayNameFor(x => x.Sistema.Descricao)">
-                        <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Sistema.Descricao)</span>
-                    </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="./Listar">Voltar</a>
-                        <button class="btn btn-primary" type="submit">Incluir</button>
-                    </div>
-                </div>
-            </form>
+<div class="mdc-card">
+    <div class="mdc-card__primary-action">
+        Title
+    </div>
+    <div class="mdc-card__actions">
+        <div class="mdc-card__action-buttons">
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+                <span class="mdc-button__label">Action 1</span>
+            </button>
+            <button class="mdc-button mdc-card__action mdc-card__action--button">
+                <span class="mdc-button__label">Action 2</span>
+            </button>
         </div>
     </div>
 </div>
