[FEAT] Adequação do CSS nos módulos de CRUD

--- a/src/Cpnucleo.RazorPages.Luna/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/Apontamento/Listar.cshtml
@@ -147,7 +147,7 @@
                 <h4 class="modal-title">Apontamento de horas</h4>
                 <small id="modal-description" class="font-bold"></small>
             </div>
-            <form method="post" class="form-horizontal">
+            <form method="post">
                 <input id="modal-id-tarefa" asp-for="Apontamento.IdTarefa" type="hidden" />
                 <input id="modal-id-recurso" asp-for="Apontamento.IdRecurso" type="hidden" />
                 <div class="modal-body">
