--- a/src/Cpnucleo.RazorPages.Luna/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/Shared/_Layout.cshtml
@@ -67,12 +67,20 @@
         <aside class="navigation">
             <nav>
                 <ul class="nav luna-nav">
+                    <li class="nav-category">
+                        Main
+                    </li>
+
                     <li>
                         <a asp-page="/Apontamento/Listar">Apontamentos</a>
                     </li>
 
                     <li>
                         <a asp-page="/FluxoTrabalho">Fluxo de Trabalho</a>
+                    </li>
+
+                    <li class="nav-category">
+                        Administração
                     </li>
 
                     <li>
