--- a/src/Cpnucleo.RazorPages.Luna/Pages/Projeto/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/Projeto/Alterar.cshtml
@@ -5,56 +5,41 @@
     ViewData["Title"] = "Alteração de Projeto";
 }
 
-<div class="col-lg-12">
-    <div class="ibox float-e-margins">
-        <div class="ibox-title">
-            <h5>@ViewData["Title"]</h5>
-            <div class="ibox-tools">
-                <a class="fullscreen-link">
-                    <i class="fa fa-expand"></i>
-                </a>
-            </div>
-        </div>
-        <div class="ibox-content">
-            <form method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.Id"></label>
-                    <div class="col-sm-10">
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-filled">
+            <div class="panel-heading">@ViewData["Title"]</div>
+            <div class="panel-body">
+                <form method="post">
+                    <div class="form-group">
+                        <label asp-for="Projeto.Id"></label>
                         <input type="hidden" asp-for="Projeto.Id">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.Id)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.Nome"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Projeto.Nome"></label>
                         <input type="text" class="form-control" asp-for="Projeto.Nome" placeholder="@Html.DisplayNameFor(x => x.Projeto.Nome)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Projeto.Nome)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.IdSistema"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Projeto.IdSistema"></label>
                         <select class="form-control m-b" asp-for="Projeto.IdSistema" asp-items="Model.SelectSistemas"></select>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.DataInclusao"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Projeto.DataInclusao"></label>
                         <input type="hidden" asp-for="Projeto.DataInclusao">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.DataInclusao)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar">Voltar</a>
-                        <button class="btn btn-primary" type="submit">Alterar</button>
+
+                    <div class="form-group">
+                        <a class="btn btn-default" role="button" asp-page="Listar">Voltar</a>
+                        <button class="btn btn-accent" type="submit">Alterar</button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
