--- a/src/Cpnucleo.RazorPages.Luna/Pages/RecursoProjeto/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/RecursoProjeto/Remover.cshtml
@@ -5,57 +5,42 @@
     ViewData["Title"] = "Remoção de Recurso (Projeto)";
 }
 
-<div class="col-lg-12">
-    <div class="ibox float-e-margins">
-        <div class="ibox-title">
-            <h5>@ViewData["Title"]</h5>
-            <div class="ibox-tools">
-                <a class="fullscreen-link">
-                    <i class="fa fa-expand"></i>
-                </a>
-            </div>
-        </div>
-        <div class="ibox-content">
-            <form method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.Id"></label>
-                    <div class="col-sm-10">
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-filled">
+            <div class="panel-heading">@ViewData["Title"]</div>
+            <div class="panel-body">
+                <form method="post">
+                    <div class="form-group">
+                        <label asp-for="RecursoProjeto.Id"></label>
                         <input type="hidden" asp-for="RecursoProjeto.Id">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Id)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.IdProjeto"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoProjeto.IdProjeto"></label>
                         <input type="hidden" asp-for="RecursoProjeto.IdProjeto" value="@Model.RecursoProjeto.IdProjeto">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Projeto.Nome)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.IdRecurso"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoProjeto.IdRecurso"></label>
                         <input type="hidden" asp-for="RecursoProjeto.IdRecurso">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Recurso.Nome)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.DataInclusao"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoProjeto.DataInclusao"></label>
                         <input type="hidden" asp-for="RecursoProjeto.DataInclusao">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.DataInclusao)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="@Model.RecursoProjeto.IdProjeto">Voltar</a>
-                        <button class="btn btn-primary" type="submit">Remover</button>
+
+                    <div class="form-group">
+                        <a class="btn btn-default" role="button" asp-page="Listar" asp-route-idProjeto="@Model.RecursoProjeto.IdProjeto">Voltar</a>
+                        <button class="btn btn-accent" type="submit">Remover</button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
