--- a/src/Cpnucleo.RazorPages.Luna/Pages/RecursoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/RecursoTarefa/Alterar.cshtml
@@ -5,85 +5,51 @@
     ViewData["Title"] = "Alteração de Recurso (Tarefa)";
 }
 
-@section Styles {
-    <!-- TouchSpin -->
-    <link href="~/css/plugins/touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
-}
-
-<div class="col-lg-12">
-    <div class="ibox float-e-margins">
-        <div class="ibox-title">
-            <h5>@ViewData["Title"]</h5>
-            <div class="ibox-tools">
-                <a class="fullscreen-link">
-                    <i class="fa fa-expand"></i>
-                </a>
-            </div>
-        </div>
-        <div class="ibox-content">
-            <form asp-page="Alterar" method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.Id"></label>
-                    <div class="col-sm-10">
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-filled">
+            <div class="panel-heading">@ViewData["Title"]</div>
+            <div class="panel-body">
+                <form method="post">
+                    <div class="form-group">
+                        <label asp-for="RecursoTarefa.Id"></label>
                         <input type="hidden" asp-for="RecursoTarefa.Id">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.Id)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdTarefa"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoTarefa.IdTarefa"></label>
                         <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="@Model.RecursoTarefa.Tarefa.Id">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.Tarefa.Nome)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdRecurso"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoTarefa.IdRecurso"></label>
                         <select class="form-control m-b" asp-for="RecursoTarefa.IdRecurso" asp-items="Model.SelectRecursos"></select>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">@Html.DisplayNameFor(x => x.RecursoTarefa.PercentualTarefa)<br><small class="text-navy">Percentual de alocação</small></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoTarefa.PercentualTarefa"></label>
                         <input id="percentual-tarefa" type="text" class="form-control" asp-for="RecursoTarefa.PercentualTarefa" placeholder="@Html.DisplayNameFor(x => x.RecursoTarefa.PercentualTarefa)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.RecursoTarefa.PercentualTarefa)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.DataInclusao"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="RecursoTarefa.DataInclusao"></label>
                         <input type="hidden" asp-for="RecursoTarefa.DataInclusao">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.DataInclusao)</p>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
-                        <button class="btn btn-primary" type="submit">Alterar</button>
+
+                    <div class="form-group">
+                        <a class="btn btn-default" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
+                        <button class="btn btn-accent" type="submit">Alterar</button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
 
 @section Scripts {
-    <!-- TouchSpin -->
-    <script src="~/js/plugins/touchspin/jquery.bootstrap-touchspin.min.js"></script>
-    <script>
-        $(document).ready(function () {
-
-            $("#percentual-tarefa").TouchSpin({
-                buttondown_class: 'btn btn-white',
-                buttonup_class: 'btn btn-white'
-            });
-        });
-    </script>
-    
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
