--- a/src/Cpnucleo.RazorPages.Luna/Pages/Tarefa/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages.Luna/Pages/Tarefa/Incluir.cshtml
@@ -10,138 +10,76 @@
     ViewData["Title"] = "Inclusão de Tarefa";
 }
 
-@section Styles {
-    <!-- DatePicker -->
-    <link href="~/css/plugins/datepicker/datepicker3.css" rel="stylesheet">
-}
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-filled">
+            <div class="panel-heading">@ViewData["Title"]</div>
+            <div class="panel-body">
+                <form method="post">
 
-<div class="col-lg-12">
-    <div class="ibox float-e-margins">
-        <div class="ibox-title">
-            <h5>@ViewData["Title"]</h5>
-            <div class="ibox-tools">
-                <a class="fullscreen-link">
-                    <i class="fa fa-expand"></i>
-                </a>
-            </div>
-        </div>
-        <div class="ibox-content">
-            <form method="post" class="form-horizontal">
+                    @{
+                        string retorno = _claimsManager.ReadClaimsPrincipal(HttpContext.User, ClaimTypes.PrimarySid);
+                        Guid idRecurso = new Guid(retorno);
+                    }
 
-                @{
-                    string retorno = _claimsManager.ReadClaimsPrincipal(HttpContext.User, ClaimTypes.PrimarySid);
-                    Guid idRecurso = new Guid(retorno);
-                }
+                    <input type="hidden" asp-for="Tarefa.IdRecurso" value="@idRecurso" />
 
-                <input type="hidden" asp-for="Tarefa.IdRecurso" value="@idRecurso" />
-
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.Nome"></label>
-                    <div class="col-sm-10">
+                    <div class="form-group">
+                        <label asp-for="Tarefa.Nome"></label>
                         <input type="text" class="form-control" asp-for="Tarefa.Nome" placeholder="@Html.DisplayNameFor(x => x.Tarefa.Nome)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Tarefa.Nome)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <!--IMPLEMENTAR DROPDOWN DE SISTEMA AQUI.-->
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.IdProjeto"></label>
-                    <div class="col-sm-10">
+
+                    <!--IMPLEMENTAR DROPDOWN DE SISTEMA AQUI.-->
+                    <div class="form-group">
+                        <label asp-for="Tarefa.IdProjeto"></label>
                         <select class="form-control m-b" asp-for="Tarefa.IdProjeto" asp-items="Model.SelectProjetos"></select>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div id="date-inicio" class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.DataInicio"></label>
-                    <div class="col-sm-10">
-                        <div class="input-group date">
-                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                            <input type="text" class="form-control" asp-for="Tarefa.DataInicio" placeholder="@Html.DisplayNameFor(x => x.Tarefa.DataInicio)">
-                        </div>
+
+                    <div id="date-inicio" class="form-group">
+                        <label asp-for="Tarefa.DataInicio"></label>
+                        <input type="text" class="form-control" asp-for="Tarefa.DataInicio" placeholder="@Html.DisplayNameFor(x => x.Tarefa.DataInicio)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Tarefa.DataInicio)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div id="date-termino" class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.DataTermino"></label>
-                    <div class="col-sm-10">
-                        <div class="input-group date">
-                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                            <input type="text" class="form-control" asp-for="Tarefa.DataTermino" placeholder="@Html.DisplayNameFor(x => x.Tarefa.DataTermino)">
-                        </div>
+
+                    <div id="date-termino" class="form-group">
+                        <label asp-for="Tarefa.DataTermino"></label>
+                        <input type="text" class="form-control" asp-for="Tarefa.DataTermino" placeholder="@Html.DisplayNameFor(x => x.Tarefa.DataTermino)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Tarefa.DataTermino)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">@Html.DisplayNameFor(x => x.Tarefa.QtdHoras)<br><small class="text-navy">Horas</small></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Tarefa.QtdHoras"></label>
                         <input type="text" class="form-control" asp-for="Tarefa.QtdHoras" placeholder="@Html.DisplayNameFor(x => x.Tarefa.QtdHoras)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Tarefa.QtdHoras)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.Detalhe"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Tarefa.Detalhe"></label>
                         <input type="text" class="form-control" asp-for="Tarefa.Detalhe" placeholder="@Html.DisplayNameFor(x => x.Tarefa.Detalhe)">
                         <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Tarefa.Detalhe)</span>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.IdTipoTarefa"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Tarefa.IdTipoTarefa"></label>
                         <select class="form-control m-b" asp-for="Tarefa.IdTipoTarefa" asp-items="Model.SelectTipoTarefas"></select>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.IdWorkflow"></label>
-                    <div class="col-sm-10">
+
+                    <div class="form-group">
+                        <label asp-for="Tarefa.IdWorkflow"></label>
                         <select class="form-control m-b" asp-for="Tarefa.IdWorkflow" asp-items="Model.SelectWorkflows"></select>
                     </div>
-                </div>
-                <div class="hr-line-dashed"></div>
-                <div class="form-group">
-                    <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar">Voltar</a>
-                        <button class="btn btn-primary" type="submit">Incluir</button>
+
+                    <div class="form-group">
+                        <a class="btn btn-default" role="button" asp-page="Listar">Voltar</a>
+                        <button class="btn btn-accent" type="submit">Incluir</button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
 
 @section Scripts {
-    <!-- DatePicker -->
-    <script src="~/js/plugins/datepicker/bootstrap-datepicker.js"></script>
-    <script src="~/js/plugins/datepicker/bootstrap-datepicker.pt-BR.js"></script>
-    <script>
-        $(document).ready(function () {
-
-            $('#date-inicio .input-group.date').datepicker({
-                todayBtn: "linked",
-                keyboardNavigation: false,
-                forceParse: false,
-                calendarWeeks: true,
-                autoclose: true,
-                format: 'dd/mm/yyyy',
-                language: 'pt-BR'
-            });
-
-            $('#date-termino .input-group.date').datepicker({
-                todayBtn: "linked",
-                keyboardNavigation: false,
-                forceParse: false,
-                calendarWeeks: true,
-                autoclose: true,
-                format: 'dd/mm/yyyy',
-                language: 'pt-BR'
-            });
-        });
-    </script>
-
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
