[FEAT] Inclusão do Mini Profiler para análise de rotas

--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet">
 </head>
 <body class="top-navigation">
+    <mini-profiler position="RenderPosition.BottomRight" />
     <div id="wrapper">
         <div id="page-wrapper" class="gray-bg">
             <div class="row border-bottom white-bg">
