--- a/src/Cpnucleo.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/_ViewImports.cshtml
@@ -3,3 +3,6 @@
 
 @namespace Cpnucleo.RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using StackExchange.Profiling
+@addTagHelper *, MiniProfiler.AspNetCore.Mvc
