[CHORE] Code Cleanup

--- a/src/Cpnucleo.RazorPages.GRPC/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages.GRPC/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
                             <i class="fa fa-reorder"></i>
                         </button>
-                        <div class="navbar-brand">@OptionsApplicationConfiguration.Value.NomeSistema - Razor Pages</div>
+                        <div class="navbar-brand">@OptionsApplicationConfiguration.Value.NomeSistema - Razor Pages - GRPC</div>
                     </div>
                     <div class="navbar-collapse collapse" id="navbar">
                         <ul class="nav navbar-nav">
