[FEAT] Adequação da solução para comunicação GRPC

--- a/src/Cpnucleo.RazorPages.GRPC/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages.GRPC/Pages/Apontamento/Listar.cshtml
@@ -54,7 +54,7 @@
                                     <td>@item.Tarefa.Nome</td>
                                     <td>@item.DataApontamento.Value.ToString("dd/MM/yyyy")</td>
                                     <td>@item.QtdHoras</td>
-                                    <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
+                                    <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
