--- a/src/Cpnucleo.RazorPages.GRPC/Pages/Recurso/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages.GRPC/Pages/Recurso/Listar.cshtml
@@ -44,7 +44,7 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>@item.Nome</td>
-                                    <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
+                                    <td>@item.DataInclusao.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
