[FEAT] Refatoração da lógica para listar tarefas para apontamento e fluxo de trabalho. Ajustes no gRPC

--- a/src/Cpnucleo.RazorPages.GRPC/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages.GRPC/Pages/Apontamento/Listar.cshtml
@@ -85,7 +85,7 @@
     </div>
 </div>
 
-<div class="row">
+@*<div class="row">
     <div class="col-lg-4">
         <div class="ibox">
             <div class="ibox-content">
@@ -146,7 +146,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <div class="modal inmodal" id="modal-apontamento" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
