--- a/src/Cpnucleo.RazorPages/Pages/FluxoTrabalho.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/FluxoTrabalho.cshtml
@@ -21,7 +21,7 @@
     {
         @Html.AntiForgeryToken()
 
-        foreach (var workflow in Model.Lista)
+        @*foreach (var workflow in Model.Lista)
         {
             <div class="col-lg-@workflow.TamanhoColuna">
                 <div class="ibox">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-        }
+        }*@
     }
 </div>
 
