--- a/src/Cpnucleo.RazorPages/Pages/Login.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Login.cshtml
@@ -95,7 +95,7 @@
                     <p style="text-align: left;">Fazendo uma visita? utilize as seguintes credenciais:</p>
                     <br>
                     <ul style="padding-left: 15px;">
-                        <li style="text-align: left;">login: "usuario.teste" - TESTE AZURE DEVOPS</li>
+                        <li style="text-align: left;">login: "usuario.teste" - TESTE AZURE DEVOPS 2</li>
                         <li style="text-align: left;">senha: "12345678"</li>
                     </ul>
                 </div>
