[CHORE] Unificação dos objetos de autenticação

--- a/src/Cpnucleo.RazorPages/Pages/Login.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Login.cshtml
@@ -82,12 +82,12 @@
                 }
 
                 <div class="form-group">
-                    <input type="text" class="form-control" asp-for="Login.Usuario" placeholder="@Html.DisplayNameFor(x => x.Login.Usuario)">
-                    <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Login.Usuario)</span>
+                    <input type="text" class="form-control" asp-for="Recurso.Login" placeholder="@Html.DisplayNameFor(x => x.Recurso.Login)">
+                    <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Recurso.Login)</span>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" asp-for="Login.Senha" placeholder="@Html.DisplayNameFor(x => x.Login.Senha)">
-                    <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Login.Senha)</span>
+                    <input type="password" class="form-control" asp-for="Recurso.Senha" placeholder="@Html.DisplayNameFor(x => x.Recurso.Senha)">
+                    <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Recurso.Senha)</span>
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Entrar</button>
                 <div class="alert alert-info alert-dismissible" role="alert">
