--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cpnucleo.RazorPages.Models.TarefaViewModel
+﻿@model Cpnucleo.Infra.CrossCutting.Util.ViewModels.TarefaViewModel
 
 <li class="@Model.TipoTarefa.Element" data-toggle="modal" data-target="#modal-apontamento"
     data-nome-tarefa="@Model.Nome" data-id-tarefa="@Model.Id" data-id-recurso="@Model.IdRecurso">
