--- a/src/Cpnucleo.MVC/Views/Tarefa/Incluir.cshtml
+++ b/src/Cpnucleo.MVC/Views/Tarefa/Incluir.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Cpnucleo.MVC.Services
 @using System.Security.Claims
 
-@model TarefaViewModel
+@model TarefaView
 @{
     ViewData["Title"] = "Inclusão de Tarefa";
 }
