--- a/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Alterar.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImpedimentoTarefaViewModel
+﻿@model ImpedimentoTarefaView
 @{
     ViewData["Title"] = "Alteração de Impedimento (Tarefa)";
 }
