--- a/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Incluir.cshtml
+++ b/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Incluir.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImpedimentoTarefaViewModel
+﻿@model ImpedimentoTarefaView
 @{
     ViewData["Title"] = "Inclusão de Impedimento (Tarefa)";
 }
