--- a/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Listar.cshtml
+++ b/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Listar.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImpedimentoTarefaViewModel
+﻿@model ImpedimentoTarefaView
 @{
     ViewData["Title"] = "Relação de Impedimentos (Tarefa)";
 }
