--- a/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Remover.cshtml
+++ b/src/Cpnucleo.MVC/Views/ImpedimentoTarefa/Remover.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImpedimentoTarefaViewModel
+﻿@model ImpedimentoTarefaView
 @{
     ViewData["Title"] = "Remoção de Impedimento (Tarefa)";
 }
