--- a/src/Cpnucleo.Blazor/_Imports.razor
+++ b/src/Cpnucleo.Blazor/_Imports.razor
@@ -9,5 +9,5 @@
 @using Cpnucleo.Blazor
 @using Cpnucleo.Blazor.Shared
 
-@using Cpnucleo.Blazor.Models
+@using Cpnucleo.Infra.CrossCutting.Util.ViewModels
 @using Cpnucleo.Blazor.Services.Interfaces
