--- a/src/Cpnucleo.Blazor/Pages/Projeto/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Projeto/Remover.razor
@@ -1,4 +1,4 @@
-@page "/sistema/remover/{id:guid}"
+@page "/projeto/remover/{id:guid}"
 @inject ICpnucleoApiService cpnucleoApiService;
 @inject NavigationManager navigationManager
 
@@ -24,7 +24,7 @@
                 else
                 {
                     <div class="form-group">
-                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
+                        <label class="col-sm-2 control-label">Nome</label>
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Nome">                            
                             <p class="form-control-static">@model.Nome</p>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
+                        <label class="col-sm-2 control-label">Descrição</label>
                         <div class="col-sm-10">
                             <input type="hidden" @bind-value="model.Descricao">                            
                             <p class="form-control-static">@model.Descricao</p>
