--- a/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
@@ -18,7 +18,7 @@
                 <DataAnnotationsValidator />             
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nome</label>
+                    <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Nome)" /></label>
                     <div class="col-sm-10">
                         <InputText class="form-control" @bind-Value="model.Nome" />
                         <ValidationMessage For="@(() => model.Nome)" />
@@ -26,7 +26,7 @@
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Descrição</label>
+                    <label class="col-sm-2 control-label"><DisplayName For="@(() => model.Descricao)" /></label>
                     <div class="col-sm-10">
                         <InputText class="form-control" @bind-Value="model.Descricao" />                        
                         <ValidationMessage For="@(() => model.Descricao)" />
