--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -17,11 +17,11 @@
                 <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Gerenciar <span class="caret"></span></a>
                 <ul role="menu" class="dropdown-menu">
                     <li><a href="/sistema/listar">Relação de Sistemas</a></li>                                      
-                    <li><a asp-page="/Impedimento/Listar">Relação de Impedimentos</a></li>
-                    <li><a asp-page="/Recurso/Listar">Relação de Recursos</a></li>
-                    <li><a asp-page="/Projeto/Listar">Relação de Projetos</a></li>
-                    <li><a asp-page="/Workflow/Listar">Relação de Workflow</a></li>
-                    <li><a asp-page="/Tarefa/Listar">Relação de Tarefas</a></li>
+                    <li><a href="/Impedimento/Listar">Relação de Impedimentos</a></li>
+                    <li><a href="/Recurso/Listar">Relação de Recursos</a></li>
+                    <li><a href="/Projeto/Listar">Relação de Projetos</a></li>
+                    <li><a href="/Workflow/Listar">Relação de Workflow</a></li>
+                    <li><a href="/Tarefa/Listar">Relação de Tarefas</a></li>
                 </ul>
             </li>
         </ul>
