Ajustes no projeto blazor

--- a/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Incluir.razor
@@ -1,6 +1,8 @@
 @page "/sistema/incluir"
 @inject ICpnucleoApiService cpnucleoApiService;
-@inject NavigationManager navigationManager
+@inject NavigationManager navigationManager;
+
+<PageTitle>Inclusão de Sistema</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
