--- a/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Remover.razor
@@ -1,6 +1,8 @@
 @page "/sistema/remover/{id:guid}"
 @inject ICpnucleoApiService cpnucleoApiService;
-@inject NavigationManager navigationManager
+@inject NavigationManager navigationManager;
+
+<PageTitle>Remoção de Sistema</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
