--- a/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Alterar.razor
@@ -1,6 +1,8 @@
 @page "/sistema/alterar/{id:guid}"
 @inject ICpnucleoApiService cpnucleoApiService;
-@inject NavigationManager navigationManager
+@inject NavigationManager navigationManager;
+
+<PageTitle>Alteração de Sistema</PageTitle>
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
