--- a/src/Cpnucleo.Blazor/Shared/NavMenu.razor
+++ b/src/Cpnucleo.Blazor/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
                     <li><a href="/sistema/listar">Relação de Sistemas</a></li>                                      
                     <li><a asp-page="/Impedimento/Listar">Relação de Impedimentos</a></li>
                     <li><a asp-page="/Recurso/Listar">Relação de Recursos</a></li>
-                    <li><a asp-page="/Projeto/Listar">Relação de Projetos</a></li>
+                    <li><a href="/Projeto/Listar">Relação de Projetos</a></li>
                     <li><a asp-page="/Workflow/Listar">Relação de Workflow</a></li>
                     <li><a asp-page="/Tarefa/Listar">Relação de Tarefas</a></li>
                 </ul>
