--- a/src/Cpnucleo.Blazor/Pages/Sistema/Listar.razor
+++ b/src/Cpnucleo.Blazor/Pages/Sistema/Listar.razor
@@ -83,11 +83,11 @@
 </div>
 
 @code {
-    private IEnumerable<Sistema> sistemas;
+    private IEnumerable<SistemaViewModel> sistemas;
 
     protected override async Task OnInitializedAsync()
     {
-        sistemas = await cpnucleoApiService.GetAsync<IEnumerable<Sistema>>("sistema", "");
+        sistemas = await cpnucleoApiService.GetAsync<IEnumerable<SistemaViewModel>>("sistema", "");
         //sistemas = await Http.GetFromJsonAsync<IEnumerable<Sistema>>("sistema");
 
         await JS.InvokeVoidAsync("dataTables", "Relação de Sistemas");
